tests/invalid/UnionType_Invalid_16.whiley
type named is null | int[]

function f(named f) -> int:
    return f[0]